samples/_failures_safe/1761227182_960325_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8909ec0.c: In function ‘main’:
./samples/SAFE/__tmp_e8909ec0.c:182:9: error: expected declaration or statement at end of input
  182 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_e8909ec0.c:182:9: error: expected declaration or statement at end of input
